--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,4 +6,64 @@
     lilás: #5f2c82
 **/
 
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html {
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    background-color: lightgray;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
+    
+}
+
+section#login > div#imagem {
+    background: #5f2c82 url(../imagens/metal.jpg) no-repeat;
+    background-size: cover;
+    height: 200px;
+    background-position: left;
+}
+
+section#login > div#formulario {
+    padding: 15px;
+}
+
+input {
+    padding: 5px;
+    outline: none;
+    margin-top: 5px;
+}
+
+input#entrar {
+    width: 108px;
+    background-color: rgb(127, 192, 192);
+    border-radius: 5px;
+}
+
+input#button {
+    width: 108px;
+    border-radius: 5px;
+}
 
